Use correct gutter spacing when sticky header is present

--- a/mtp_cashbook/assets-src/stylesheets/views/_batch.scss
+++ b/mtp_cashbook/assets-src/stylesheets/views/_batch.scss
@@ -38,6 +38,11 @@
         margin-top: 0;
         margin-bottom: 0;
       }
+
+      .container {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
     }
   }
 
